fixed nav-ul width on tablet screens and above

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -4,7 +4,7 @@ header {
 
     .logo_button {
         display: flex;
-        gap: .5rem;
+        gap: .25rem;
         align-items: center;
 
         button {
@@ -60,7 +60,7 @@ header {
 @media screen and (max-width: 1023px) {
     header {
         padding: 1.25rem .5rem;
-        
+
         nav {
             ul {
                 flex-direction: column;
@@ -68,17 +68,15 @@ header {
                 justify-content: center;
                 position: fixed;
                 min-height: 100vh;
-                right: -100%;
+                right: -50%;
                 top: 0;
                 width: 50%;
                 background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
 
-
                 &.show {
-                    transition: .5s ease;
                     right: 0;
+                    transition: .5s ease;
                 }
-
 
                 .center_links {
                     flex-direction: column;
@@ -98,12 +96,6 @@ header {
 
         .hamburger {
             padding: 1.75rem;
-        }
-
-        nav {
-            ul {
-                width: 15rem;
-            }
         }
     }
 }
