--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ header .logo_button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: .5rem;
+  gap: .25rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -110,15 +110,15 @@ header nav ul .end_links {
             justify-content: center;
     position: fixed;
     min-height: 100vh;
-    right: -100%;
+    right: -50%;
     top: 0;
     width: 50%;
     background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
   }
   header nav ul.show {
+    right: 0;
     -webkit-transition: .5s ease;
     transition: .5s ease;
-    right: 0;
   }
   header nav ul .center_links {
     -webkit-box-orient: vertical;
@@ -140,9 +140,6 @@ header nav ul .end_links {
   }
   header .hamburger {
     padding: 1.75rem;
-  }
-  header nav ul {
-    width: 15rem;
   }
 }
 
